--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
     "googleapis": "^148.0.0",
+    "handlebars": "^4.7.8",
     "minio": "^8.0.5",
     "nodemailer": "^6.10.1",
     "pg": "^8.14.1",
@@ -44,6 +45,7 @@
     "@nestjs/testing": "^11.0.11",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/handlebars": "^4.1.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
