--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "stripe": "^18.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
