--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.8.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "google-auth-library": "^9.15.1",
     "minio": "^8.0.5",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
