--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "moduleResolution": "node",
+    "types": ["node", "express", "multer"]
   },
   "watchOptions": {
     "watchFile": "priorityPollingInterval",
