--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
     "handlebars": "^4.7.8",
+    "jose": "^6.0.11",
     "minio": "^8.0.5",
     "nodemailer": "^7.0.2",
     "pg": "^8.14.1",
