--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER}
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
       - MINIO_SCHEME=${MINIO_SCHEME}
-      - MINIO_DEFAULT_BUCKETS=influencer-pictures,policies,portfolios,legal,company-pictures
+      - MINIO_DEFAULT_BUCKETS=influencer-pictures,policies,portfolios,legal,company-pictures,invoices,collaborations
     volumes:
       - minio_data:/data
 
