--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^11.0.11",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/swagger": "^11.0.6",
+    "@nestjs/websockets": "^11.1.6",
     "argon2": "^0.41.1",
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
@@ -38,6 +40,7 @@
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "stripe": "^18.0.0",
     "uuid": "^11.1.0"
   },
@@ -50,6 +53,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
