--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,8 @@ services:
       - pgadmin_data:/var/lib/pgadmin
 
   rociny-minio:
-    image: bitnami/minio:latest
+    image: minio/minio:latest
+    command: server /data --console-address ":9001"
     ports:
       - '9000:9000'
       - '9001:9001'
@@ -80,9 +81,6 @@ services:
     environment:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER}
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
-      - MINIO_SCHEME=${MINIO_SCHEME}
-      - MINIO_DEFAULT_BUCKETS=influencer-pictures,policies,portfolios,legal,company-pictures,invoices,collaborations
-      - MINIO_SERVER_OPTS=--console-address ":9001"
     volumes:
       - minio_data:/data
 
