--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
     networks:
       - my-network
     environment:
-      - MINIO_SERVER_URL=https://minio.rociny.com/s3
+      - MINIO_SERVER_URL=https://minio-api.rociny.com
       - MINIO_ROOT_USER=${MINIO_ROOT_USER}
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
     volumes:
