--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jose": "^6.0.11",
     "minio": "^8.0.5",
     "nodemailer": "^7.0.2",
+    "pdfkit": "^0.17.2",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -53,6 +54,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.17.3",
     "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
